Build admin links in ai query results

--- a/packages/django_lenskit_ai_query/django_lenskit_ai_query/templates/admin_lenskit/ai_query.html
+++ b/packages/django_lenskit_ai_query/django_lenskit_ai_query/templates/admin_lenskit/ai_query.html
@@ -122,8 +122,12 @@
             <tr>
               {% for k, v in r.items %}
                 {% if k != 'admin_url' %}
-                  {% if k == 'pk' and r.admin_url %}
-                    <td><a href="{{ r.admin_url }}">{{ v }}</a></td>
+                  {% if r.admin_url %}
+                    {% if k == 'pk' or k == pk_field %}
+                      <td><a href="{{ r.admin_url }}">{{ v }}</a></td>
+                    {% else %}
+                      <td>{{ v }}</td>
+                    {% endif %}
                   {% else %}
                     <td>{{ v }}</td>
                   {% endif %}
